marcadores en reporte de agenda global y versión de la app

--- a/ligapro_manager/templates/base.html
+++ b/ligapro_manager/templates/base.html
@@ -195,7 +195,7 @@
     {% block content %}{% endblock %}
 
     <footer class="text-center py-4 text-white/40 text-sm">
-        <p>LigaPro Manager &copy; 2026 - Sole Cybernetic</p>
+        <p>LigaPro Manager &copy; 2026 - Sole Cybernetic - Version {{ app_version }}</p>
     </footer>
 </body>
 
